# tsl

./: .bazelrc  .bazelversion  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  dependencies.bzl  extensions.bzl  opensource_only.files  workspace.bzl  workspace2.bzl
.kokoro/linux/: build.sh
.kokoro/linux/cpu/: common.cfg
.kokoro/macos/: build.sh
.kokoro/macos/cpu/: cpu_py39_full.cfg
.kokoro/windows/: build.bat  windows_build.sh
tools/def_file_filter/: def_file_filter.py.tpl  symbols_pybind.txt
tools/toolchains/remote_config/: configs.bzl  containers.bzl
tsl/: BUILD  tsl.bzl  tsl.default.bzl
tsl/c/: BUILD
tsl/concurrency/: BUILD  async_value.cc  async_value.h  async_value_ref.h  concurrent_vector.h  ref_count.cc
tsl/cuda/: BUILD
tsl/distributed_runtime/: BUILD
tsl/distributed_runtime/coordination/: BUILD  coordination_service.cc  coordination_service.h  coordination_service_agent.cc  (+6 more)
tsl/framework/: BUILD  allocator.h  bfc_allocator.cc  bfc_allocator.h  cancellation.cc  cancellation.h  cpu_allocator_impl.cc  metrics.cc  metrics.h  metrics_test.cc  type_traits.h
tsl/mkl/: build_defs.bzl
tsl/platform/: BUILD  bfloat16.h  build_config.bzl  build_config_root.bzl  casts.h  cord.h  cpu_info.cc  cpu_info.h  ctstring.h  ctstring_internal.h  env.h  errors.h  file_system.cc  float8.cc  float8.h  float8_test.cc  float8_test.cu.cc  hash.h  human_readable_json.h  logging.h  macros.h  mem.h  ml_dtypes.h  mutex.h  mutex_test.cc  numa.h  numbers.cc  numbers.h  platform.h  protobuf.cc  protobuf.h  protobuf_util.cc  refcount.h  rules_cc.bzl  snappy.h  status.cc  status.h  status_test.cc  statusor.h  str_util.h  (+10 more)
tsl/profiler/: BUILD
tsl/protobuf/: BUILD  coordination_config.proto  coordination_service.proto  dnn.proto
tsl/util/: BUILD  command_line_flags.cc  command_line_flags.h  determinism.cc  reporter.h  stats_calculator.cc
(+144 files in other folders)
