module(name = "tsl")

bazel_dep(name = "abseil-cpp", version = "20211102.0", repo_name = "com_google_absl")
bazel_dep(name = "re2", version = "2021-09-01", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "googletest", version = "1.11.0", repo_name = "com_google_googletest")
bazel_dep(name = "protobuf", version = "3.19.6", repo_name = "com_google_protobuf")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "rules_license", version = "0.0.3")
bazel_dep(name = "zlib", version = "1.2.12")

use_repo(
    use_extension("//:extensions.bzl", "extensions"),
    "cuda",
    "cudnn",
    "farmhash",
    "fft2d",
    "highwayhash",
    "hwloc",
    "implib_so",
    "nccl",
    "nsync",
    "snappy",
)
