module(name = "tsl")

bazel_dep(name = "abseil-cpp", version = "20211102.0", repo_name = "com_google_absl")
bazel_dep(name = "rules_cc", version = "0.0.2")
bazel_dep(name = "re2", version = "2021-09-01", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "googletest", version = "1.11.0", repo_name = "com_google_googletest")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "protobuf", version = "3.19.6", repo_name = "com_google_protobuf")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "rules_license", version = "0.0.3")
bazel_dep(name = "zlib", version = "1.2.12")

use_repo(
    use_extension("//:extensions.bzl", "extensions"),
    "cudnn",
    "fft2d",
    "gif",
    "highwayhash",
    "hwloc",
    "implib_so",
    "libjpeg_turbo",
    "local_config_remote_execution",
    "nccl",
    "nsync",
    "png",
    "snappy",
    # TODO(csigg): use native names instead.
    com_google_benchmark="benchmark",
    farmhash_archive="farmhash",
    local_config_cuda="cuda",
)
